--- a/css/flex-container.css
+++ b/css/flex-container.css
@@ -4,12 +4,12 @@
 }
 
 .left-rail {
-   background-color: lightgray;
+   /* background-color: lightgray; */
    flex: 0 0 59px;
 }
 
 .left-gutter {
-   background-color: gray;
+   /* background-color: gray; */
    flex: 2 2 auto;
 }
 
@@ -21,13 +21,13 @@
    flex: 0 0 307px;
 }
 
-.dialogue-rail {
-   background-color: lightgray;
+.dialog-rail {
+   /* background-color: lightgray; */
    flex: 0 1 470px;
 }
 
 .right-gutter {
-   background-color: gray;
+   /* background-color: gray; */
    flex: 6 6 auto;
 }
 
