CHANGE dialog icon from button to div
- not in tab index
- keep buttons sacred

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,3 +1,9 @@
+.dialog-icon {
+   padding: 0px 9px;
+   color: white;
+   background-color: #50596c;
+}
+
 @media (min-width: 800px) {
    .dialog {
       position: absolute;
