EDIT - correct background-color

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,7 +1,7 @@
 .dialog-icon {
    padding: 0px 9px;
    color: white;
-   background-color: #50596c;
+   background-color: #5757d9;
 }
 
 @media (min-width: 800px) {
