--- a/css/avatar-rail.css
+++ b/css/avatar-rail.css
@@ -2,3 +2,24 @@
    font-size: x-small;
 }
 
+.arrow-box {
+   position: relative;
+   color: white;
+   background: #5757d9;
+   margin-right: 4px;
+}
+
+.arrow-box:after {
+   left: 100%;
+   top: 50%;
+   border: solid transparent;
+   content: " ";
+   height: 0;
+   width: 0;
+   position: absolute;
+   pointer-events: none;
+   border-color: rgba(87, 85, 157, 0);
+   border-left-color: #5757d9;
+   border-width: 10px;
+   margin-top: -10px;
+}
