Edit - smaller info icon

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,7 +1,8 @@
 .dialog-icon {
-   padding: 0px 9px;
+   padding: 0px 7px;
    color: white;
    background-color: #5757d9;
+   line-height: 1.2;
 }
 
 @media (min-width: 800px) {
