Comment-out testing colors for new build

--- a/css/flex-container.css
+++ b/css/flex-container.css
@@ -16,12 +16,12 @@
 }
 
 .left-rail {
-   background-color: lightgray;
+   /* background-color: lightgray; */
    flex: 0 0 59px;
 }
 
 .left-gutter {
-   background-color: gray;
+   /* background-color: gray; */
    flex: 2 2 auto;
 }
 
@@ -38,12 +38,12 @@
 }
 
 .dialog-rail {
-   background-color: lightgray;
+   /* background-color: lightgray; */
    flex: 0 0 470px;
 }
 
 .right-gutter {
-   background-color: gray;
+   /* background-color: gray; */
    flex: 6 6 auto;
 }
 
